--- a/WholeBase/MainWindow.xaml
+++ b/WholeBase/MainWindow.xaml
@@ -4,9 +4,36 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WholeBase"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        
+        Title="Login" Height="760" Width="450"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        Background="{x:Null}"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        WindowStartupLocation="CenterScreen">
+    <materialDesign:Card UniformCornerRadius="15" 
+    Background="{DynamicResource MaterialDesignPaper}" Margin="25">
+        <materialDesign:DialogHost CloseOnClickAway="True" x:Name="DialogHost">
+            <StackPanel>
+                <materialDesign:PopupBox 
+                    HorizontalAlignment="Right" Margin="0 20 40 0" PlacementMode="BottomAndAlignRightEdges" 
+                    StaysOpen="False" Height="25">
+                    <StackPanel Margin="16 10 0 6" Orientation="Horizontal"
+                                HorizontalAlignment="Center">
+                        <TextBlock VerticalAlignment="Center" Text="Dark Mode"/>
+                        <ToggleButton Cursor="Hand" ToolTip="Enable Dark Mode" Margin="12 0 8 0"
+                        x:Name="ThemToogle" IsChecked="{Binding IsDarkTheme}" Click="ThemToogle_Click"/>
 
-    </Grid>
+                        <Button x:Name="btn_exit" ToolTip="Close Application" Content="Exit Application" Click="btn_exit_Click"/>
+                    </StackPanel>
+                </materialDesign:PopupBox>
+                <Image Margin="0 60 0 5" Source="logo.png" Height="100" HorizontalAlignment="Center"/>
+                <TextBlock Margin="0 25 0 5" Text="Welcome Back" HorizontalAlignment="Center" FontSize="28"
+                           FontWeight="Bold"/>
+            </StackPanel>
+        </materialDesign:DialogHost>
+    </materialDesign:Card>
+
 </Window>
