--- a/WholeBase/MainWindow.xaml
+++ b/WholeBase/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         
         Title="Login" Height="760" Width="450"
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
     <Grid>
         <materialDesign:Card 
            Background="{DynamicResource MaterialDesignPaper}"  materialDesign:ShadowAssist.ShadowDepth="Depth0">
