--- a/WholeBase/RegisterWindow.xaml
+++ b/WholeBase/RegisterWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:WholeBase"
         mc:Ignorable="d"
         Title="RegisterWindow" Height="760" Width="450"   
-        WindowStartupLocation="CenterScreen">
+        WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
     
     <materialDesign:Card  
            Background="{DynamicResource MaterialDesignPaper}"  materialDesign:ShadowAssist.ShadowDepth="Depth0">
